[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
# quote 主要用于生成代码
quote = "1.0.37"
# syn 主要用于解析代码 (解析TokenStream)
syn = { version = "2.0.77", features = ["extra-traits"] }

# [dev-dependencies] 作用于examples下的文件
[dev-dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
